...
        dashboardNavigationController.setViewControllers(
            [dashboardViewController],
            animated: false
        )

        dashboardNavigationController.tabBarItem = UITabBarItem(
            title: "Dashboard",
            image: UIImage(systemName: "chart.pie"),
            selectedImage: UIImage(systemName: "chart.pie.fill")
        )

        let transactionsNavigationController = UINavigationController()
        let transactionsViewController = makeTransactionsViewController(navigationController: transactionsNavigationController)
...
        transactionsNavigationController.setViewControllers(
            [transactionsViewController],
            animated: false
        )

        transactionsNavigationController.tabBarItem = UITabBarItem(
            title: "Transactions",
            image: UIImage(systemName: "list.bullet"),
            selectedImage: UIImage(systemName: "list.bullet")
        )

        tabBarController.viewControllers = [
            dashboardNavigationController,
...
