...

        let saveBarButtonItem = UIBarButtonItem(
            barButtonSystemItem: .save,
            target: self,
            action: #selector(saveButtonTapped)
        )
        saveBarButtonItem.accessibilityIdentifier = "editTransaction.saveButton"
        navigationItem.rightBarButtonItem = saveBarButtonItem
    }

    override func setupViews() {
        super.setupViews()

...
        stackView.addArrangedSubview(datePicker)

        stackView.addArrangedSubview(makeSectionTitle("Description"))
        stackView.addArrangedSubview(descriptionTextView)
        
        titleTextField.accessibilityIdentifier =
            "editTransaction.titleTextField"

        amountTextField.accessibilityIdentifier =
            "editTransaction.amountTextField"

        categoryTextField.accessibilityIdentifier =
            "editTransaction.categoryTextField"
...
